--- a/frontend/CoffeeMekMonitoringServer/_Imports.razor
+++ b/frontend/CoffeeMekMonitoringServer/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using CoffeeMekMonitoringServer
 @using CoffeeMekMonitoringServer.Shared
+@using CoffeeMekMonitoringServer.Models
+@using CoffeeMekMonitoringServer.Services.Interfaces 
+@using CoffeeMekMonitoringServer.Pages.Components.Modals
