--- a/frontend/CoffeeMekMonitoringServer/_Imports.razor
+++ b/frontend/CoffeeMekMonitoringServer/_Imports.razor
@@ -11,3 +11,7 @@
 @using CoffeeMekMonitoringServer.Models
 @using CoffeeMekMonitoringServer.Services.Interfaces 
 @using CoffeeMekMonitoringServer.Pages.Components.Modals
+
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+@* @attribute [Authorize] *@
