--- a/frontend/CoffeeMekMonitoringServer/Shared/MainLayout.razor
+++ b/frontend/CoffeeMekMonitoringServer/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
-﻿@inherits LayoutComponentBase
-
-<PageTitle>CoffeeMekMonitoringServer</PageTitle>
+﻿@using Microsoft.AspNetCore.Components.Web
+@namespace CoffeeMekMonitoringServer.Shared
+@inherits LayoutComponentBase
 
 <div class="page">
     <div class="sidebar">
@@ -9,11 +9,35 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <div class="d-flex justify-content-between align-items-center">
+                <div>
+                    <AuthorizeView>
+                        <Authorized>
+                            <small class="text-muted">
+                                Benvenuto, <strong>@context.User.Identity?.Name</strong>
+                            </small>
+                        </Authorized>
+                    </AuthorizeView>
+                </div>
+                <div>
+                    <LogoutComponent />
+                </div>
+            </div>
         </div>
 
         <article class="content px-4">
             @Body
         </article>
     </main>
+</div>
+
+<div id="blazor-error-ui">
+    <environment include="Staging,Production">
+        An error has occurred. This application may no longer respond until reloaded.
+    </environment>
+    <environment include="Development">
+        An unhandled exception has occurred. See browser dev tools for details.
+    </environment>
+    <a href="" class="reload">Reload</a>
+    <a class="dismiss">🗙</a>
 </div>
